<resources>
    <string name="app_name">MetaPost</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="User">Admin</string>
    <string name="email">email@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="social_login">Social Login</string>
    <string name="edit">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="security_privacy">Security and Privacy</string>
    <string name="language">Language</string>
    <string name="text">Text Size</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="no_account_register">Nemaš račun? Registriraj se</string>
    <string name="account_icon_description">Ikona korisničkog računa</string>
    <string name="search_hint">Traži…</string>
    <string name="user_name_metabot">MetaBot</string>
    <string name="user_status_online">online</string>
    <string name="back_button_desc">Natrag</string>
    <string name="profile_image_desc">Profilna slika</string>
    <string name="call_icon_desc">Poziv</string>
    <string name="search_icon_desc">Pretraga</string>
    <string name="arrow_up_desc">Prethodni rezultat</string>
    <string name="arrow_down_desc">Sljedeći rezultat</string>
    <string name="close_search_desc">Zatvori pretragu</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>

</resources>